cmake_minimum_required(VERSION 3.10)
project(OpenTrackr C)

set(CMAKE_C_STANDARD 11)

add_compile_options(-O3 -flto -ffast-math -funroll-loops)
if(NOT CMAKE_CROSSCOMPILING)
    add_compile_options(-march=native)
endif()

option(BUILD_X86_64 "Build for x86_64" ON)
option(BUILD_X86_32 "Build for x86 32bit" OFF)
option(BUILD_ARM "Build for ARM" OFF)
option(BUILD_ARM32 "Build for ARM32" OFF)
option(BUILD_POWER7 "Build for Power7" OFF)
option(BUILD_POWER8 "Build for Power8" OFF)
option(BUILD_POWER9 "Build for Power9" OFF)
option(BUILD_RISCV "Build for RISC-V" OFF)
option(BUILD_RISCV32 "Build for RISC-V32" OFF)
option(BUILD_X86_64_AVX512 "Build for x86_64 with AVX512" OFF)
option(NO_VECTOR "Disable vector paths" OFF)

if(NO_VECTOR)
    add_compile_definitions(NO_VECTOR)
endif()

if(BUILD_X86_64)
    add_executable(OpenTrackr main.c)
    target_compile_options(OpenTrackr PRIVATE -m64 -march=core2 -msse3)
    target_link_libraries(OpenTrackr PRIVATE $<$<PLATFORM_ID:Windows>:ws2_32> $<$<NOT:$<PLATFORM_ID:Windows>>:pthread>)
endif()

if(BUILD_X86_32)
    add_executable(OpenTrackr_x86_32 main.c)
    target_compile_options(OpenTrackr_x86_32 PRIVATE -m32 -march=core2 -msse3)
    target_link_libraries(OpenTrackr_x86_32 PRIVATE $<$<PLATFORM_ID:Windows>:ws2_32> $<$<NOT:$<PLATFORM_ID:Windows>>:pthread>)
endif()

if(BUILD_ARM)
    add_executable(OpenTrackr_arm main.c)
    target_compile_options(OpenTrackr_arm PRIVATE -march=armv8-a)
    target_link_libraries(OpenTrackr_arm PRIVATE $<$<PLATFORM_ID:Windows>:ws2_32> $<$<NOT:$<PLATFORM_ID:Windows>>:pthread>)
endif()

if(BUILD_ARM32)
    add_executable(OpenTrackr_arm32 main.c)
    target_compile_options(OpenTrackr_arm32 PRIVATE -march=armv7-a -mfpu=neon -mfloat-abi=hard)
    target_link_libraries(OpenTrackr_arm32 PRIVATE $<$<PLATFORM_ID:Windows>:ws2_32> $<$<NOT:$<PLATFORM_ID:Windows>>:pthread>)
endif()

if(BUILD_POWER7)
    add_executable(OpenTrackr_power7 main.c)
    target_compile_options(OpenTrackr_power7 PRIVATE -mcpu=power7 -maltivec)
    target_link_libraries(OpenTrackr_power7 PRIVATE $<$<PLATFORM_ID:Windows>:ws2_32> $<$<NOT:$<PLATFORM_ID:Windows>>:pthread>)
endif()

if(BUILD_POWER8)
    add_executable(OpenTrackr_power8 main.c)
    target_compile_options(OpenTrackr_power8 PRIVATE -mcpu=power8 -maltivec)
    target_link_libraries(OpenTrackr_power8 PRIVATE $<$<PLATFORM_ID:Windows>:ws2_32> $<$<NOT:$<PLATFORM_ID:Windows>>:pthread>)
endif()

if(BUILD_POWER9)
    add_executable(OpenTrackr_power9 main.c)
    target_compile_options(OpenTrackr_power9 PRIVATE -mcpu=power9 -maltivec)
    target_link_libraries(OpenTrackr_power9 PRIVATE $<$<PLATFORM_ID:Windows>:ws2_32> $<$<NOT:$<PLATFORM_ID:Windows>>:pthread>)
endif()

if(BUILD_RISCV)
    add_executable(OpenTrackr_riscv main.c)
    target_compile_options(OpenTrackr_riscv PRIVATE -march=rv64gcv -mabi=lp64d)
    target_link_libraries(OpenTrackr_riscv PRIVATE $<$<PLATFORM_ID:Windows>:ws2_32> $<$<NOT:$<PLATFORM_ID:Windows>>:pthread>)
endif()

if(BUILD_RISCV32)
    add_executable(OpenTrackr_riscv32 main.c)
    target_compile_options(OpenTrackr_riscv32 PRIVATE -march=rv32imafdcv -mabi=ilp32d)
    target_link_libraries(OpenTrackr_riscv32 PRIVATE $<$<PLATFORM_ID:Windows>:ws2_32> $<$<NOT:$<PLATFORM_ID:Windows>>:pthread>)
endif()

if(BUILD_X86_64_AVX512)
    add_executable(OpenTrackr_avx512 main.c)
    target_compile_options(OpenTrackr_avx512 PRIVATE -m64 -march=skylake-avx512 -mavx512f)
    target_link_libraries(OpenTrackr_avx512 PRIVATE $<$<PLATFORM_ID:Windows>:ws2_32> $<$<NOT:$<PLATFORM_ID:Windows>>:pthread>)
endif()
